--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_pizza
 spring.datasource.username=root
 spring.datasource.password=root
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.hibernate.ddl-auto=create
 # See sql queries(NON RACCOMANDATO IN PRODUZIONE)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
