--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.hibernate.ddl-auto=create
 # See sql queries(NON RACCOMANDATO IN PRODUZIONE)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+# Date time formatting
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
